# navtracker

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt  todo.md
adapters/ais/: AisAdapter.cpp  AisAdapter.hpp
adapters/arpa/: ArpaAdapter.cpp  ArpaAdapter.hpp
adapters/benchmark/: RbadScenarioRun.cpp  RbadScenarioRun.hpp  ReplayScenarioRun.cpp  ReplayScenarioRun.hpp  SimMultisensorScenarioRun.cpp  SimMultisensorScenarioRun.hpp  SimScenarioRun.cpp  SimScenarioRun.hpp
adapters/eoir/: EoIrAdapter.cpp  EoIrAdapter.hpp
adapters/foxglove/: FoxgloveDebugRecorder.cpp  FoxgloveDebugRecorder.hpp  FoxgloveJson.cpp  FoxgloveJson.hpp  Geometry.cpp  Geometry.hpp  McapWriter.cpp  McapWriter.hpp  Schemas.hpp
adapters/land/: GeoJsonCoastline.cpp  GeoJsonCoastline.hpp
adapters/own_ship/: OwnShipNmeaAdapter.cpp  OwnShipNmeaAdapter.hpp  OwnShipProvider.cpp  OwnShipProvider.hpp
adapters/remote_track/: RemoteTrackAdapter.cpp  RemoteTrackAdapter.hpp
adapters/replay/: AisCsvReplayAdapter.cpp  AisCsvReplayAdapter.hpp  AutoferryJsonReplay.cpp  AutoferryJsonReplay.hpp  CameraBearingCsvReader.cpp  CameraBearingCsvReader.hpp  HaxrTruthLoader.cpp  HaxrTruthLoader.hpp  OwnshipCsvReader.cpp  OwnshipCsvReader.hpp  PlotCsvReplayAdapter.cpp  PlotCsvReplayAdapter.hpp  RadarTruthCsvReader.cpp  RadarTruthCsvReader.hpp
adapters/static/: GeoJsonStaticObstacles.cpp  GeoJsonStaticObstacles.hpp
adapters/t2t/: NavtrackerSource.hpp
adapters/util/: DatumReproject.hpp  EdgeValidation.cpp  EdgeValidation.hpp  Nmea.cpp  Nmea.hpp  Projection.cpp  Projection.hpp
app/: example.cpp  example_t2t.cpp  mht_fusion_example.cpp
bench/: CMakeLists.txt  baseline_matrix.cpp  compare.cpp  render_markdown.cpp
charts/: ANALYSIS.md  export_obstacles.py  export_philos_chart_structure.py  philos_chart_coverage.py  philos_cluster_classification.csv  philos_cluster_classification.py
charts/ENC_ROOT/: CATALOG.031  README.TXT
charts/geojson/: aid_fixed.geojson  aid_floating.geojson  fixed_surface.geojson  land.geojson  manifest.json  obstacles_all.geojson  radar_clutter.geojson  underwater_hazard.geojson
cmake/: navtrackerConfig.cmake.in
core/association/: Gating.cpp  Gating.hpp  GnnAssociator.cpp  GnnAssociator.hpp  Hungarian.cpp  Hungarian.hpp  JointEvents.cpp  JointEvents.hpp  JpdaAssociator.cpp  JpdaAssociator.hpp  Murty.cpp  Murty.hpp
core/benchmark/: BenchRunner.cpp  BenchRunner.hpp  BenchSink.cpp  BenchSink.hpp  Comparator.cpp  Comparator.hpp  Config.cpp  Config.hpp  Consistency.cpp  Consistency.hpp  CsvReader.cpp  CsvReader.hpp  CsvWriter.cpp  CsvWriter.hpp  ExistenceLabel.cpp  ExistenceLabel.hpp  GospaExport.cpp  GospaExport.hpp  MarkdownRenderer.cpp  MarkdownRenderer.hpp  Metrics.cpp  Metrics.hpp  Placeholder.hpp  PmbmDiagRecorder.hpp  ScenarioRun.hpp  Sweep.cpp  Sweep.hpp
core/bias/: AisArpaPairExtractor.cpp  AisArpaPairExtractor.hpp  HeadingBiasEstimator.cpp  HeadingBiasEstimator.hpp  HeadingBiasObservations.hpp  SensorBiasEstimator.cpp  SensorBiasEstimator.hpp  SensorBiasPairExtractor.cpp  SensorBiasPairExtractor.hpp
core/collision/: Cpa.cpp  Cpa.hpp  CpaEvaluator.cpp  CpaEvaluator.hpp  CpaOwnShip.cpp  CpaOwnShip.hpp  StaticHazardEvaluator.cpp  StaticHazardEvaluator.hpp
core/estimation/: BearingRangeGuard.cpp  BearingRangeGuard.hpp  ConstantVelocity2D.cpp  ConstantVelocity2D.hpp  ConstantVelocity5State.cpp  ConstantVelocity5State.hpp  CoordinatedTurn.cpp  CoordinatedTurn.hpp  EkfEstimator.cpp  EkfEstimator.hpp  EstimatorDefaults.cpp  GaussianScore.hpp  ImmEstimator.cpp  ImmEstimator.hpp  MeasurementModels.cpp  MeasurementModels.hpp  NoiseModels.hpp  ParticleFilterEstimator.cpp  ParticleFilterEstimator.hpp  PolarVelocity.hpp  PrescribedTurn.cpp  PrescribedTurn.hpp  Resampling.cpp  Resampling.hpp  SigmaPoints.cpp  SigmaPoints.hpp  UkfEstimator.cpp  UkfEstimator.hpp
core/geo/: AxisRotation.cpp  AxisRotation.hpp  Datum.cpp  Datum.hpp  Wgs84.cpp  Wgs84.hpp
core/land/: CoastlineGeometry.cpp  CoastlineGeometry.hpp  CoastlineModel.hpp
core/output/: BearingWedgeOutput.cpp  BearingWedgeOutput.hpp  StaticHazardOutput.cpp  StaticHazardOutput.hpp  TrackOutput.cpp  TrackOutput.hpp
core/own_ship/: IDatumChangeSink.hpp  NavInputGuard.cpp  NavInputGuard.hpp  OwnShipProvider.cpp  OwnShipProvider.hpp  OwnShipVelocityEstimator.cpp  OwnShipVelocityEstimator.hpp  UereEstimator.cpp  UereEstimator.hpp
core/pipeline/: BiasCorrection.hpp  MhtTracker.cpp  MhtTracker.hpp  ReorderBuffer.cpp  ReorderBuffer.hpp  SourceTouchPopulate.hpp  Tracker.cpp  Tracker.hpp
core/pmbm/: PmbmDiagnostics.hpp  PmbmTracker.cpp  PmbmTracker.hpp  PmbmTypes.hpp
core/projection/: Projection.cpp  (+1 more)
data/: README.md
docs/: debug-visualization.md  integration-guide.md  output-contract.md
examples/consumer_find_package/: CMakeLists.txt  README.md  main.cpp
ports/: IBearingInnovationSink.hpp  ICollisionRiskSink.hpp  IDataAssociator.hpp  IEstimator.hpp  IFusedTrackSink.hpp  IFusionRule.hpp  IHeadingBiasProvider.hpp  IInnovationSink.hpp  ILandModel.hpp  ILiveOccupancyFeed.hpp  IMeasurementNoiseModel.hpp  IMotionModel.hpp  INavHealthSink.hpp  ISensorActivity.hpp  ISensorAdapter.hpp  ISensorBiasProvider.hpp  ISensorDetectionModel.hpp  IStaleSignalSink.hpp  IStaticHazardSink.hpp  IStaticObstacleModel.hpp  ITrackSink.hpp  ITrackSnapshotSink.hpp
sim/: AisEmitter.cpp  AisEmitter.hpp  ArpaEmitter.cpp  ArpaEmitter.hpp  EoIrEmitter.cpp  EoIrEmitter.hpp  NmeaEncode.cpp  NmeaEncode.hpp  OwnShipEmitter.cpp  OwnShipEmitter.hpp  SensorEmitter.hpp  SimulatedSensorBus.cpp  SimulatedSensorBus.hpp  SkewInjector.cpp  SkewInjector.hpp  TruthTrajectory.cpp  TruthTrajectory.hpp
tests/: smoke_test.cpp
tools/: README.md  autoferry_q_calibration.py  autoferry_r_calibration.py  bench_diff.py  build_autoferry_coastline.py  cl4_a3_census.cpp  dossier_aggregate.py  dossier_cpa_loss.py  foxglove_autoferry.cpp  foxglove_pmbm_scenario.cpp  imazu_cardinality_timing.py  imazu_switch_forensics.py  imazu_trackloss.py  pmbm_closepass_trace.py  pmbm_phase2a_probe.py  pmbm_phase2b_ab.py  pmbm_phase2b_innov_probe.py  stonesoup_gospa_crosscheck.py
(+687 files in other folders)
